--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ input[type="number"] {
 
 input {
   outline: none;
+  color: rgb(255, 206, 243);
 }
 
 .numbers,
@@ -121,6 +122,7 @@ input {
   text-align: center;
   flex: 1;
   min-width: 200px;
+  color: rgb(255, 206, 243);
 }
 
 @media screen and (max-width: 600px) {
@@ -141,6 +143,7 @@ footer {
   text-align: center;
   padding: 20px;
   margin-top: 50px;
+  text-shadow: 0 0 20px rgb(255, 206, 243);
 }
 
 .container.visible {
